--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 <div id="navbar" class="underline">
     <header>
-        <nav class="d-flex align-items-center navhight">
+        <nav class="d-flex align-items-center height70">
             <div class="gradient1 navlogo"></div>
             <div class="navtitle-style">Examen Portfolio</div>
-            <div class="d-flex justify-content-end align-items-center flex-grow-1" style="padding-right:16px;gap: 20px;">
+            <div class="d-flex justify-content-end align-items-center flex-grow-1 navgap" >
                 <a class="navlink" href="#portfolio">Werk</a>
                 <a class="navlink" href="#diensten">Diensten</a>
                 <a class="navlink" href="#proces">Proces</a>
@@ -57,23 +57,23 @@
             <div class="d-flex justify-content-between distancing-bloks" >
                 <article class="shadow-soft projecten">
                     <div>
-                        <img class="img-size" src="assets/img/project1.jpg">
+                        <img class="img-size" src="assets/img/project1.jpg" alt="project1">
                     </div>
                     <h3 class="propdh3" >Saas landingspagina</h3>
                     <p class="badgep badge-style" >Design & Build</p>
                     <p class="">Helder value prop, sicial proof en pricing. Conversiestijging en relaunch</p>
                 </article>
                 <article class="shadow-soft projecten">
-                    <div style="">
-                        <img class="img-size" src="assets/img/project1.jpg">
+                    <div>
+                        <img class="img-size" src="assets/img/project1.jpg" alt="project2">
                     </div>
                     <h3 class="propdh3" >E-commerce redsign</h3>
                     <p class="badgep badge-style" >UX & Perfomance</p>
                     <p class="">Beter filter-UX en sneller laadtijden met lagere bounce.</p>
                 </article>
                 <article class="shadow-soft projecten">
-                    <div style="">
-                        <img class="img-size" src="assets/img/project1.jpg">
+                    <div>
+                        <img class="img-size" src="assets/img/project1.jpg" alt="project3">
                     </div>
                     <h3 class="propdh3" >Creatief portfolio</h3>
                     <p class="badgep badge-style" >Art Direction</p>
@@ -89,7 +89,7 @@
                 <h2>Wat ik voor je doe</h2>
             </div>
 
-            <div class="d-flex justify-content-between" style=" gap:20px; margin-top: 5px">
+            <div class="d-flex justify-content-between dienstenblok-margin" >
                 <article class="shadow-soft projecten w-33">
                     <h3 class="propdh3" >UX/UI Ontwerop</h3>
                     <p class="">Wireframe, component en duidelijke user flow</p>
@@ -152,18 +152,18 @@
                     <h2>Wie ik ben</h2>
                 </div>
 
-                <div class="d-flex " style=" gap:20px; margin-top: 5px">
-                    <article class="projecten ">
-                        <img class="img-size" src="assets/img/project1.jpg" alt="">
-                    </article>
+                <div class="d-flex overblok-margin " >
+                        <div class="projecten " >
+                            <img class="img-size" src="assets/img/project1.jpg" alt="wie ben ik">
+                        </div>
                     <article class=" projecten">
                         <h3 class="propdh3">Design, code en resultaat</h3>
                         <p class="propdp">Ik combineer vormgeving met technische uitvoer. Focus op inhoud, snelheid en conversie</p>
-                        <div style="margin-top: 25px">
-                            <p class="badge" style="display:inline-block;">HTML & CSS3</p>
-                            <p class="badge" style="display:inline-block;">Performance</p>
-                            <p class="badge" style="display:inline-block;">Toegankelijkheid</p>
-                            <p class="badge" style="display:inline-block;">SEO</p>
+                        <div class="overbadge-margin">
+                            <p class="badge badge-style" >HTML & CSS3</p>
+                            <p class="badge badge-style" >Performance</p>
+                            <p class="badge badge-style" >Toegankelijkheid</p>
+                            <p class="badge badge-style" >SEO</p>
                         </div>
                     </article>
                 </div>
@@ -197,7 +197,7 @@
         </div>
     </section>
 </main>
-<footer id="footer" class="hight70 d-flex justify-content-between">
+<footer id="footer" class="hight70 d-flex justify-content-between align-items-center">
     <div><p>&copy; 2025 Examen Portfolio</p></div>
     <div><p>Semantische HTML en CSS3, niet-responsief, zonder pseudo-selectors/vars. Positie via flex + gap/margin/padding.</p>
     </div>
