--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                     <p>Doorloop: 2-6 weken volgens scope.</p>
-                    <a href="-blank"><button class="knop">Valideren</button></a>
+                    <a href="-blacdnk"><button class="knop">Valideren</button></a>
                 </div>
             </div>
         </div>
